# ai-first-software-engineering-book

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  404.html  AGENTS.md  CNAME  CONSTITUTION.md  DEVELOPMENT.md  README.md  ROADMAP.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/instructions/: copilot-sdk-python.instructions.md
book/: glossary.md  preface.md
book/chapters/: 01-paradigm-shift.md  02-harness-engineering.md  03-autonomous-kernels.md  04-memory-systems.md  05-evaluation-and-traces.md  06-agent-governance.md  07-production-ai-infrastructure.md  99-future-directions.md
book/glossary/: index.html
book/patterns/: diff-to-gates-router.md  evidence-bundle-standard.md  failure-signature-index.md  golden-task-canary-suite.md  harness-design-patterns.md  memory-architectures.md  memory-write-barrier.md  minimal-agent-loop.md  patch-locality-budget.md  replayable-trace-runs.md  risk-shaped-autonomy-tiers.md  scout-then-execute-two-phase-runs.md  self-verification-loop.md  waiver-ledger-exceptions-are-data.md
book/preface/: index.html
docs/: index.md
evals/: chapter-quality.yaml  drift-detection.yaml  style-guard.yaml
overrides/: main.html
prompts/: bootstrap.md  critic.md  planner.md  writer.md
search/: search_index.json
site/: 404.html  index.html
state/: copilot-sdk-migration-plan.md  copilot_sdk_smoke_test.py  copilot_sdk_uv_smoke.py  governance_engine.py  kernel.py  ledger.json  ledger_log_store.py  llm_client.py  metrics.json  migrate_metrics_to_archive.py  role_io_templates.py  version_map.json
(+6650 files in other folders)
